# choosme

./: Cargo.toml  LICENSE  Makefile  README.md  choosme.desktop  style.css
.github/workflows/: rust.yml
doc/: cli.md  dbus.md  waybar.md
src/: cli.rs  config.rs  daemon.rs  dbus.rs  desktop_files.rs  main.rs  sway.rs  ui.rs
