[package]
name = "choosme"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0.98"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dirs = "6.0.0"
gdk4 = "0.9.6"
gtk4 = "0.9.6"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
xdg = "3.0.0"
