[package]
name = "choosme"
version = "0.1.0"
edition = "2024"
authors = ["Fabien JUIF <fabien.juif@gmail.com>"]
description = "Choose to open a link between a given list of web browsers"
homepage = "https://github.com/fabienjuif/choosme"
repository = "https://github.com/fabienjuif/choosme"
license = "MIT"
include = [
  "src/**/*",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "choosme.desktop",
]

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
clap = { version = "4.5.38", features = ["derive"] }
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dirs = "6.0.0"
gdk4 = "0.9.6"
gtk4 = "0.9.6"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
xdg = "3.0.0"
